initial redux t4 template

--- a/GG.T4/Generator/Includes/MappingExtensions.tt
+++ b/GG.T4/Generator/Includes/MappingExtensions.tt
@@ -76,7 +76,7 @@ using AutoMapper;
 using GG.Data.Models;
 using GG.Data.DTO;
 
-namespace GG.Data.Mapping
+namespace GG.Data.AutoMapper
 {
     public static class MappingExtensions
     {
