--- a/GG/Scripts/src/public/styles/main.less
+++ b/GG/Scripts/src/public/styles/main.less
@@ -1,4 +1,7 @@
 @import "./bootstrap/bootstrap";
 @import "./icomoon/style";
-@import "./containers/app";
 @import "./animate/animate";
+@import "./utils";
+@import "./containers/app";
+@import "./containers/login";
+@import "./components/form/login";
