--- a/GG.T4/Generator/Includes/Controller.tt
+++ b/GG.T4/Generator/Includes/Controller.tt
@@ -54,167 +54,97 @@
 using System;
 using System.Collections.Generic;
 using System.Linq;
-using System.Web;
-using System.Web.Mvc;
-using Mt.Core;
-using SanXing.Data;
-using SanXing.Data.Models;
-using SanXing.Data.Service;
-using SanXing.Web.Framework.Mvc;
+using System.Linq.Expressions;
+using System.Net;
+using System.Net.Http;
+using System.Data.Entity;
+using System.Web.Http;
+using System.Web.Http.Description;
+using GG.Data.Service;
+using GG.Data.DTO;
+using GG.Data.AutoMapper;
+using GG.Data.Models;
+using AutoMapper.QueryableExtensions;
+using System.Threading.Tasks;
 
-namespace SanXing.Web.Controllers
+namespace GG.Controllers
 {
-	public class <#=            _model.Name #>Controller : Controller
+    [RoutePrefix("api/<#= _model.Name #>")]
+    public class <#= _model.Name #>Controller : ApiController
     {
-
-        private readonly I<#=            _model.Name #>Service _<#=            _model.Name #>Service;
-
-        public <#=            _model.Name #>Controller(I<#=            _model.Name #>Service <#=            _model.Name #>Service)
+        private I<#= _model.Name #>Service <#= _model.Name #>Service;
+        public <#= _model.Name #>Controller(
+            I<#= _model.Name #>Service _<#= _model.Name #>Service
+          )
         {
-            this._<#=            _model.Name #>Service = <#=            _model.Name #>Service;
+            this.<#= _model.Name #>Service = _<#= _model.Name #>Service;
         }
 
-        [NonAction]
-        protected void PrepareListModel(<#=            _model.Name #>ListItemModel model, <#=            _model.Name #> entity)
+        [Route("")]
+        public IQueryable<<#= _model.Name #>DTO> Get()
         {
-            model.ID = entity.ID;
-            model.Name = entity.Name;
-            model.Deleted = entity.Deleted;
+            return <#= _model.Name #>Service.GetAll().Where(x=>!x.Deleted).ProjectTo<<#= _model.Name #>DTO>();
         }
 
-        public ActionResult Index()
+        [Route("{id:int}")]
+        [ResponseType(typeof(<#= _model.Name #>DTO))]
+        public async Task<IHttpActionResult> GetById(int id)
         {
-            return RedirectToAction("List");
+            <#= _model.Name #>DTO <#= _model.Name #> = await <#= _model.Name #>Service.GetAll().Where(x => x.Id == id&&!x.Deleted).ProjectTo<<#= _model.Name #>DTO>().FirstOrDefaultAsync();
+            if (<#= _model.Name #> == null)
+            {
+                return NotFound();
+            }
+            return Ok(<#= _model.Name #>);
         }
 
-        public ActionResult List()
-        {
-            var model = new <#=            _model.Name #>SearchModel();
-            return View(model);
-        }
-
+        [Route("")]
         [HttpPost]
-        public ActionResult List(<#=            _model.Name #>SearchModel model)
+        [ResponseType(typeof(<#= _model.Name #>DTO))]
+        public async Task<IHttpActionResult> Create([FromBody]<#= _model.Name #>DTO <#= _model.Name #>Dto)
         {
-            var query = _<#=            _model.Name #>Service.GetAll();
-
-            if (!string.IsNullOrEmpty(model.Name))
+		    if (!ModelState.IsValid)
             {
-                query = query.Where(x => x.Name.Contains(model.Name));
+                return BadRequest(ModelState);
             }
-            var data = query.OrderBy(x => x.ID).Paging<<#=            _model.Name #>>(model.page - 1, model.rows);
-
-            var gridModel = new
-            {
-                rows = data.Select(x =>
-                {
-                    var m = new <#=            _model.Name #>ListItemModel();
-                    PrepareListModel(m, x);
-                    return m;
-                }),
-                total = data.TotalCount
-            };
-
-
-            return Json(gridModel);
-        }
-
-        public ActionResult Create()
-        {
-            var model = new <#=            _model.Name #>Model();
-            return PartialView(model);
-        }
-
-        [HttpPost]
-        [ValidateAntiForgeryToken]
-        public ActionResult Create(<#=            _model.Name #>Model model)
-        {
-            ServiceResult result = new ServiceResult();
-            if (ModelState.IsValid)
-            {
-                try
-                {
-                    var entity = model.ToEntity();
-                    _<#=            _model.Name #>Service.Insert(entity);
-                    result.Message = "添加<#=            _model.Description #>成功！";
-                }
-                catch (Exception ex)
-                {
-                    result.Message = Utilities.GetInnerMostException(ex);
-                    result.AddServiceError(result.Message);
-                }
-            }
-            else
-            {
-                result.Message = "请检查表单是否填写完整！";
-                result.AddServiceError("请检查表单是否填写完整！");
-            }
-            return Json(result);
-        }
-
-        public ActionResult Edit(int ID)
-        {
-            var entity = _<#=            _model.Name #>Service.Single(ID);
-
-            var model = entity.ToModel();
-
-            return PartialView(model);
+            var entity = <#= _model.Name #>Dto.ToEntity();
+            await <#= _model.Name #>Service.InsertAsync(entity);
+            return Ok(entity.ToModel());
         }
 
 
-
-        [HttpPost]
-        [ValidateAntiForgeryToken]
-        public ActionResult Edit(<#=            _model.Name #>Model model)
+        [Route("{id:int}")]
+        [HttpPut]
+        [ResponseType(typeof(<#= _model.Name #>DTO))]
+        public async Task<IHttpActionResult> Update(int id, [FromBody]<#= _model.Name #>DTO <#= _model.Name #>Dto)
         {
-            ServiceResult result = new ServiceResult();
-            var entity = _<#=            _model.Name #>Service.Single(model.ID);
-            if (ModelState.IsValid)
+			if (!ModelState.IsValid)
             {
-                try
-                {
-                    entity = model.ToEntity(entity);
-                    _<#=            _model.Name #>Service.Update(entity);
-                    result.Message = "编辑<#=            _model.Description #>成功！";
-
-                }
-                catch (Exception ex)
-                {
-                    result.Message = Utilities.GetInnerMostException(ex);
-                    result.AddServiceError(result.Message);
-
-                }
+                return BadRequest(ModelState);
             }
-            else
-            {
-                result.Message = "请检查表单是否填写完整！";
-                result.AddServiceError("请检查表单是否填写完整！");
-
-            }
-            return Json(result);
+            var entity = <#= _model.Name #>Dto.ToEntity();
+            await <#= _model.Name #>Service.UpdateAsync(entity);
+            return Ok(entity.ToModel());
         }
 
-        public ActionResult Delete(int ID)
+        [Route("{id:int}")]
+        [HttpDelete]
+        [ResponseType(typeof(<#= _model.Name #>DTO))]
+        public async Task<IHttpActionResult> Delete(int id)
         {
-            ServiceResult result = new ServiceResult();
-            var entity = _<#=            _model.Name #>Service.Single(ID);
-            try
+            <#= _model.Name #> entity = await <#= _model.Name #>Service.FindOneAsync(id);
+            if (entity == null)
             {
-                _<#=            _model.Name #>Service.Delete(entity);
-                result.Message = "删除<#=            _model.Description #>成功！";
-
+                return NotFound();
             }
-            catch (Exception ex)
-            {
-                result.Message = Utilities.GetInnerMostException(ex);
-                result.AddServiceError(result.Message);
+            await <#= _model.Name #>Service.DeleteAsync(entity);
 
-            }
-            return Json(result);
+            return Ok(entity.ToModel());
         }
 
     }
 }
+
 <#+
             return this.GenerationEnvironment.ToString();
         }
