--- a/GG.T4/Generator/MainGenerator.tt
+++ b/GG.T4/Generator/MainGenerator.tt
@@ -16,10 +16,14 @@
 <#@ include file="Includes\BaseTemplate.tt" #>
 <#@ include file="Includes\Controller.tt" #>
 <#@ include file="Includes\DTOs.tt" #>
+<#@ include file="Includes\Validators.tt" #>
 <#@ include file="Includes\ImplService.tt" #>
 <#@ include file="Includes\IService.tt" #>
 <#@ include file="Includes\Profile.tt" #>
 <#@ include file="Includes\MappingExtensions.tt" #>
+<#@ include file="Includes\Redux\Actions.tt" #>
+<#@ include file="Includes\Redux\Contants.tt" #>
+<#@ include file="Includes\Redux\Reducers.tt" #>
 <#+
     // <copyright file="MainGenerator.tt" company="Microsoft">
     //  Copyright © Microsoft. All Rights Reserved.
@@ -55,16 +59,15 @@
             foreach(Type modelType in modelTypes)
             {
                 T4ModelInfo model = new T4ModelInfo(modelType, true);
-                //yield return new Controller(model);
+                yield return new Controller(model);
                 //yield return new DTOs(model);
-                yield return new IService(model);
+				//yield return new Validators(model);
+                //yield return new IService(model);
 				//yield return new Profile(model);
-                //yield return new ViewModel(model);
-                //yield return new Validator(model);
-                //yield return new ViewList(model);
-                //yield return new ViewEdit(model);
-                //yield return new ViewCreate(model);
-                yield return new ImplService(model);
+                //yield return new Actions(model);
+                //yield return new Contants(model);
+				//yield return new Reducers(model);
+                //yield return new ImplService(model);
           
             }
             //yield return new MappingExtensions(modelTypes);
