--- a/GG/Scripts/src/public/styles/main.css
+++ b/GG/Scripts/src/public/styles/main.css
@@ -6880,13 +6880,6 @@ button.close {
 .icon-filter:before {
   content: "\e605";
 }
-#main {
-  position: absolute;
-  top: 65px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
 .left-leave {
   -webkit-animation: leftLeave 3000ms ease;
   -o-animation: leftLeave 3000ms ease;
@@ -6998,4 +6991,59 @@ button.close {
 .example1-leave.example1-leave-active {
   transform: translate3d(100%, 0, 0);
   transition: all 300ms ease-in;
+}
+/*Trangle*/
+/*text overflow shown ...*/
+.text-autocut {
+  overflow: hidden;
+  white-space: nowrap;
+  -webkit-text-overflow: ellipsis;
+  -khtml-text-overflow: ellipsis;
+  -icab-text-overflow: ellipsis;
+  -moz-text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+}
+/*custom border radius for four corner*/
+/*Inner-shadow*/
+/*Transform*/
+#main,
+#app {
+  height: 100%;
+}
+#login {
+  background: url(../images/login-bg.jpg) no-repeat 50%;
+  height: 100%;
+  position: relative;
+  transition: all ease .2s;
+}
+.login-form {
+  position: absolute;
+  width: 350px;
+  top: 25%;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+  transform: translate(-50%);
+  z-index: 99;
+}
+.form-validate {
+  text-align: right;
+  color: #fc615c;
+}
+.form-validate-item {
+  display: none;
+}
+.form-validate-item:last-child {
+  display: block;
+}
+.form-input-area {
+  margin-bottom: 30px;
+  overflow: hidden;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 3px 3px 1px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 3px 3px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 3px 3px 1px rgba(0, 0, 0, 0.15);
+  position: relative;
 }
